src/builtin.zig

//! Built-in config file system — replaces `joe/builtin.c`
//!
//! Provides `jfopen`, `jfclose`, `jfgets`, `jgetbuiltins` that read
//! from either real files or from embedded `builtins[]` memory buffers
//! (the `*name` protocol).  The `builtins[]` array itself is still
//! generated by the C `builtins.c`.

const std = @import("std");

extern fn joe_malloc(size: isize) ?*anyopaque;
extern fn joe_free(ptr: ?*anyopaque) void;
extern fn fopen(path: [*c]const u8, mode: [*c]const u8) ?*anyopaque;
extern fn fclose(f: ?*anyopaque) c_int;
extern fn fgets(buf: [*c]u8, len: c_int, f: ?*anyopaque) ?*anyopaque;
extern fn strcmp(a: [*c]const u8, b: [*c]const u8) c_int;
extern fn strlen(s: [*c]const u8) isize;
extern fn _vaset(vary: ?*anyopaque, pos: isize, el: ?*anyopaque) ?*anyopaque;
extern fn vsncpy(a: ?*anyopaque, pos: isize, s: ?*const anyopaque, len: isize) ?*anyopaque;

/// C `const char *const builtins[]` — pairs of (name, content), NULL-terminated.
/// Must be an *array* symbol. Declaring it as `[*c]T` makes Zig load the first
/// pointer slot as the base address, then index into string bytes (crash).
extern const builtins: [64]?[*:0]const u8;

/// JFILE — matching C struct layout
const JFILE = extern struct {
    f: ?*anyopaque, // FILE* or null
    p: ?*anyopaque, // const char* in-memory pointer (for builtins)
};

export fn jfopen(name: [*c]const u8, mode: [*c]const u8) ?*anyopaque {
    if (name[0] == '*') {
        var x: usize = 0;
        while (builtins[x] != null) : (x += 2) {
            if (strcmp(builtins[x].?, name + 1) == 0) {
                const j = @as(*JFILE, @alignCast(@ptrCast(joe_malloc(@sizeOf(JFILE)) orelse return null)));
                j.* = .{ .f = null, .p = @ptrCast(@constCast(builtins[x + 1])) };
                return @ptrCast(j);
            }
        }
        return null;
    } else {
        const f = fopen(name, mode);
        if (f != null) {
            const j = @as(*JFILE, @alignCast(@ptrCast(joe_malloc(@sizeOf(JFILE)) orelse return null)));
            j.* = .{ .f = f, .p = null };
            return @ptrCast(j);
        }
        return null;
    }
}

export fn jfclose(f: ?*anyopaque) c_int {
    const jf = @as(*JFILE, @alignCast(@ptrCast(f orelse return 0)));
    var rtn: c_int = 0;
    if (jf.f != null) rtn = fclose(jf.f.?);
    joe_free(@ptrCast(jf));
    return rtn;
}

export fn jfgets(buf: [*c]u8, len: c_int, f: ?*anyopaque) ?*anyopaque {
    const jf = @as(*JFILE, @alignCast(@ptrCast(f orelse return null)));
    if (jf.f != null) {
        return fgets(buf, len, jf.f.?);
    } else {
        const p = @as([*c]const u8, @ptrCast(jf.p)) orelse return null;
        if (p[0] == 0) return null;
        var x: isize = 0;
        while (p[@as(usize, @intCast(x))] != 0 and p[@as(usize, @intCast(x))] != '\n') : (x += 1) {
            buf[@as(usize, @intCast(x))] = p[@as(usize, @intCast(x))];
        }
        if (p[@as(usize, @intCast(x))] == '\n') {
            buf[@as(usize, @intCast(x))] = '\n';
            x += 1;
        }
        buf[@as(usize, @intCast(x))] = 0;
        jf.p = @ptrFromInt(@intFromPtr(p) + @as(usize, @intCast(x)));
        return buf;
    }
}

export fn jgetbuiltins(suffix: [*c]const u8) ?*anyopaque {
    const sflen = if (suffix != null) strlen(suffix) else 0;
    var result: ?*anyopaque = null;
    var x: usize = 0;
    while (builtins[x] != null) : (x += 2) {
        const name: [*c]const u8 = builtins[x].?;
        const nlen = strlen(name);
        if (suffix == null or (sflen <= nlen and strcmp(suffix, @ptrFromInt(@intFromPtr(name) + @as(usize, @intCast(nlen - sflen)))) == 0)) {
            result = _vaset(result, aLEN(result), vsncpy(null, 0, @ptrCast(name), strlen(name)));
        }
    }
    return result;
}

// Helper: aLEN macro for variable-length arrays (va.h format)
fn aLEN(vary: ?*anyopaque) isize {
    if (vary) |v| {
        const hdr = @as([*]isize, @alignCast(@ptrCast(v))) - 1;
        return hdr[0];
    }
    return 0;
}